Added About form

--- a/DemonsSoulsSaveOrganizer/App.config
+++ b/DemonsSoulsSaveOrganizer/App.config
@@ -23,8 +23,11 @@
     </userSettings>
     <applicationSettings>
         <DemonsSoulsSaveOrganizer.Properties.Settings>
-            <setting name="AboutLink" serializeAs="String">
+            <setting name="GithubRepository" serializeAs="String">
                 <value>https://github.com/NaxHPL/DemonsSoulsSaveOrganizer</value>
+            </setting>
+            <setting name="TwitterLink" serializeAs="String">
+                <value>https://twitter.com/NaxHPL</value>
             </setting>
         </DemonsSoulsSaveOrganizer.Properties.Settings>
     </applicationSettings>
