--- a/DemonsSoulsSaveOrganizer/Properties/Settings.settings
+++ b/DemonsSoulsSaveOrganizer/Properties/Settings.settings
@@ -8,8 +8,11 @@
     <Setting Name="ProfilesDirectory" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="AboutLink" Type="System.String" Scope="Application">
+    <Setting Name="GithubRepository" Type="System.String" Scope="Application">
       <Value Profile="(Default)">https://github.com/NaxHPL/DemonsSoulsSaveOrganizer</Value>
+    </Setting>
+    <Setting Name="TwitterLink" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">https://twitter.com/NaxHPL</Value>
     </Setting>
   </Settings>
 </SettingsFile>
