Added settings button and put About and Help in it's context menu

--- a/DemonsSoulsSaveOrganizer/App.config
+++ b/DemonsSoulsSaveOrganizer/App.config
@@ -29,6 +29,9 @@
             <setting name="TwitterLink" serializeAs="String">
                 <value>https://twitter.com/NaxHPL</value>
             </setting>
+            <setting name="HelpLink" serializeAs="String">
+                <value>https://github.com/NaxHPL/DemonsSoulsSaveOrganizer#getting-started</value>
+            </setting>
         </DemonsSoulsSaveOrganizer.Properties.Settings>
     </applicationSettings>
 </configuration>
