Added global hotkey support and settings form

--- a/DemonsSoulsSaveOrganizer/App.config
+++ b/DemonsSoulsSaveOrganizer/App.config
@@ -19,6 +19,12 @@
             <setting name="ProfilesDirectory" serializeAs="String">
                 <value />
             </setting>
+            <setting name="GlobalHotkeysEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="LoadSavestateHotkey" serializeAs="String">
+                <value>0</value>
+            </setting>
         </DemonsSoulsSaveOrganizer.Properties.Settings>
     </userSettings>
     <applicationSettings>
@@ -30,7 +36,7 @@
                 <value>https://twitter.com/NaxHPL</value>
             </setting>
             <setting name="HelpLink" serializeAs="String">
-                <value>https://github.com/NaxHPL/DemonsSoulsSaveOrganizer#getting-started</value>
+                <value>https://github.com/NaxHPL/DemonsSoulsSaveOrganizer#demons-souls-save-organizer</value>
             </setting>
         </DemonsSoulsSaveOrganizer.Properties.Settings>
     </applicationSettings>
