Added replace savestate functionality

--- a/DemonsSoulsSaveOrganizer/DemonsSoulsSaveOrganizer.csproj
+++ b/DemonsSoulsSaveOrganizer/DemonsSoulsSaveOrganizer.csproj
@@ -142,6 +142,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
+    <None Include="Resources\replace.png" />
     <None Include="Resources\info.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
