Added savestate sorting options

--- a/DemonsSoulsSaveOrganizer/App.config
+++ b/DemonsSoulsSaveOrganizer/App.config
@@ -25,6 +25,9 @@
             <setting name="LoadSavestateHotkey" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="SortByIndex" serializeAs="String">
+                <value>0</value>
+            </setting>
         </DemonsSoulsSaveOrganizer.Properties.Settings>
     </userSettings>
     <applicationSettings>
