--- a/DemonsSoulsSaveOrganizer/DemonsSoulsSaveOrganizer.csproj
+++ b/DemonsSoulsSaveOrganizer/DemonsSoulsSaveOrganizer.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Savestate.cs" />
+    <Compile Include="SavestateCreationDateComparer.cs" />
     <Compile Include="SettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
