--- a/DemonsSoulsSaveOrganizer/Properties/Settings.settings
+++ b/DemonsSoulsSaveOrganizer/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="LoadSavestateHotkey" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="SortByIndex" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
